[package]
authors = ["David Pollak <feeder.of.the.bears@gmail.com>"]
edition = "2018"
name = "mutt"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "~1.2"
async-channel = {version = "1.5.1", optional = true}
async-std = "~1.9"
async-trait = "~0.1"
chrono = {version = "~0.4", features = ["serde"]}
fixed = {version = "1.5", features = ["std", "serde-str", "az", "serde"]}
im = {version = "~15", features = ["proptest", "serde"]}
lazy_static = "~1.4"
rpds = {version = "~0.8"}
rug = "~1.11"
serde = {version = "~1.0", features = ["derive"]}
serde_derive = "~1.0"
serde_json = "~1.0"
sha2 = "~0.9"
tokio = {version = "1", features = ["full"]}
uuid = {version = "~0.8", features = ["serde", "v4", "v5"]}

[dependencies.pyo3]
features = ["auto-initialize"]
version = "0.13.1"

[[bin]]
name = "mutt"
path = "bin/mutt.rs"
